--- a/style.css
+++ b/style.css
@@ -8,4 +8,9 @@ h1, nav {
   text-align: center;
 }
 
-<img style="text-align: center;"></figure>
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
