--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ figcaption {
 
 #featured-property p {
   width: 800px;
-  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #details {
