--- a/style.css
+++ b/style.css
@@ -27,3 +27,10 @@ figcaption {
 #details {
   display: block;
 }
+
+#details div {
+  float: left;
+  background-color: red;
+  text-align: center;
+  width: 25%;
+}
