--- a/style.css
+++ b/style.css
@@ -20,8 +20,7 @@ figcaption {
 
 #featured-property p {
   width: 800px;
-  margin-left: auto;
-  margin-right: auto;
+  text-align: center;
 }
 
 #details {
